--- a/web/static/dashboard.html
+++ b/web/static/dashboard.html
@@ -18,6 +18,7 @@
                 <a href="/dashboard" class="dropdown-link active">Dashboard</a>
                 <a href="/guilds" class="dropdown-link">Guilds</a>
                 <a href="/performance" class="dropdown-link">Performance</a>
+                <a href="/suggestions" class="dropdown-link">Suggestions</a>
                 <a href="/webhook" class="dropdown-link">Webhook</a>
             </div>
             <div class="nav-brand">Discord Combat AI</div>
