--- a/web/static/performance.html
+++ b/web/static/performance.html
@@ -19,6 +19,7 @@
                 <a href="/dashboard" class="dropdown-link">Dashboard</a>
                 <a href="/guilds" class="dropdown-link">Guilds</a>
                 <a href="/performance" class="dropdown-link active">Performance</a>
+                <a href="/suggestions" class="dropdown-link">Suggestions</a>
                 <a href="/webhook" class="dropdown-link">Webhook</a>
             </div>
             <div class="nav-brand">Discord Combat AI</div>
