--- a/web/static/webhook.html
+++ b/web/static/webhook.html
@@ -251,6 +251,7 @@
                 <a href="/dashboard" class="dropdown-link">Dashboard</a>
                 <a href="/guilds" class="dropdown-link">Guilds</a>
                 <a href="/performance" class="dropdown-link">Performance</a>
+                <a href="/suggestions" class="dropdown-link">Suggestions</a>
                 <a href="/webhook" class="dropdown-link active">Webhook</a>
             </div>
             <div class="nav-brand">Discord Combat AI - Webhook</div>
